# GIAIC-Q4-Hackathons

hackathon-2/phase-I/In-Memory-Python-Console-App/: .gitignore  CLAUDE.md  README.md  pyproject.toml
hackathon-2/phase-I/In-Memory-Python-Console-App/.claude/agents/: in-memory-storage-subagent.md  menu-flow-subagent.md  pip-dependency-manager.md  python-venv-manager.md  search-filter-subagent.md  sorting-subagent.md  task-model-specialist.md  task-priority-manager.md  todo-app-architect.md  todo-cli-handler.md  todo-core-handler.md  todo-edge-case-tester.md  todo-organization-agent.md  todo-testing-agent.md
hackathon-2/phase-I/In-Memory-Python-Console-App/.specify/memory/: constitution.md
hackathon-2/phase-I/In-Memory-Python-Console-App/specs/001-todo-app/: plan.md  research.md  spec.md  tasks.md
hackathon-2/phase-I/In-Memory-Python-Console-App/src/: __init__.py  cli.py  main.py  models.py  services.py  storage.py
hackathon-2/phase-I/In-Memory-Python-Console-App/tests/: test_specific_features.py  validate_features.py
hackathon-2/phase-V/Full-Stack-Web-Application-AI-Chatbot-Advanced-Cloud-Deployment/backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_server.py
hackathon-2/phase-V/Full-Stack-Web-Application-AI-Chatbot-Advanced-Cloud-Deployment/backend/alembic/: env.py
hackathon-2/phase-V/Full-Stack-Web-Application-AI-Chatbot-Advanced-Cloud-Deployment/backend/cache/: service.py
hackathon-2/phase-V/Full-Stack-Web-Application-AI-Chatbot-Advanced-Cloud-Deployment/backend/docs/: api.md
hackathon-2/phase-V/Full-Stack-Web-Application-AI-Chatbot-Advanced-Cloud-Deployment/backend/routes/: tasks.py
(+861 files in other folders)
